craftcms/craft-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: craft-service
  namespace: craftcms
spec:
  selector:
    app: craft-deployment
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
---
