craftcms/db-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql-deployment
  type: NodePort
  ports:
    - port: 3306
---
